Add translation fallback for undefined message strings, fixes #64

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,33 +2,33 @@
 
 {% block pid %}id="padmin"{%endblock%}
 {% block content %}
-<h1>{{ page.glob.langa.admin_short }}</h1>
+<h1>{{ page.glob.l10n.admin_short }}</h1>
 
 <ul data-role="listview">
 	<li>
 		<a href="{{page.rot}}/admin/configuration/">
-			<h2>{{page.glob.langa.admin}}</h2>
+			<h2>{{page.glob.l10n.admin}}</h2>
 		</a>
 	</li>
 	<li>
 		<a href="{{page.rot}}/admin/users/">
-			<h2>{{page.glob.langa.admin_users}}</h2>
+			<h2>{{page.glob.l10n.admin_users}}</h2>
 		</a>
 	</li>
 		<li>
 		<a href="{{page.rot}}/admin/idtemplates/">
-			<h2>{{page.glob.langa.admin_idtemplates}}</h2>
+			<h2>{{page.glob.l10n.admin_idtemplates}}</h2>
 		</a>
 	</li>
 	</li>
 		<li>
 		<a href="{{page.rot}}/admin/mail/">
-			<h2>{{page.glob.langa.admin_mail}}</h2>
+			<h2>{{page.glob.l10n.admin_mail}}</h2>
 		</a>
 	</li>
 	<li>
 		<a href="{{page.rot}}/admin/version/">
-			<h2>{{page.glob.langa.admin_check_version}}</h2>
+			<h2>{{page.glob.l10n.admin_check_version}}</h2>
 		</a>
 	</li>
 </ul>
