--- a/templates/admin_version.html
+++ b/templates/admin_version.html
@@ -3,7 +3,7 @@
 {% block pid %}id="padmin_version"{%endblock%}
 {% block content %}
 
-<h1>{{ page.glob.langa.admin_check_version }}</h1>
+<h1>{{ page.glob.l10n.admin_check_version }}</h1>
 {% include "flash_messages.html" %}
 
 <p {% if versionClass != '' %}class="{{versionClass}}"{% endif %}>
