--- a/templates/logout.html
+++ b/templates/logout.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 <header>
-	<h1>{{page.glob.langa.logout}}</h1>	
+	<h1>{{page.glob.l10n.logout}}</h1>	
 </header>  
 <p>
-{{page.glob.langa.logout_expl}}:  <a href="{{page.rot}}/login/">{{page.glob.langa.login}}</a>.
+{{page.glob.l10n.logout_expl}}:  <a href="{{page.rot}}/login/">{{page.glob.l10n.login}}</a>.
 </p>
 {% endblock %}
