--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="tag_detail row">
 	<header>
-		<h1>{{page.glob.langa.booksbytag}} "{{ tag.name }}":</h1>
+		<h1>{{page.glob.l10n.booksbytag}} "{{ tag.name }}":</h1>
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
