--- a/templates/global_search.html
+++ b/templates/global_search.html
@@ -6,20 +6,20 @@
 {% block content %}
 <div data-role="collapsible-set">
 	<div data-role="collapsible">
-		<h3>{{page.glob.langa.titles}}: {{books_total}}</h3>
+		<h3>{{page.glob.l10n.titles}}: {{books_total}}</h3>
 		<ul data-role="listview" data-filter="false">	
 			{% for book in books %}
 				{% include "title_entry.html" %}
 		  	{% endfor %}
 		  	{% if more_books %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/titleslist/0/?search={{search}}">{{books_total}} {{page.glob.langa.titles}} ...</a>
+		  			<a href="{{page.rot}}/titleslist/0/?search={{search}}">{{books_total}} {{page.glob.l10n.titles}} ...</a>
 				</li>
 			{% endif %}
 		</ul>
 	</div>
 	<div data-role="collapsible">
-		<h3>{{page.glob.langa.authors}}:  {{authors_total}}</h3>
+		<h3>{{page.glob.l10n.authors}}:  {{authors_total}}</h3>
 		<ul data-role="listview" data-filter="false">	
 			{% for author in authors %}
 				<li>
@@ -30,13 +30,13 @@
 		  {% endfor %}
 		  {% if more_authors %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/authorslist/0/?search={{search}}">{{authors_total}} {{page.glob.langa.authors}}...</a>
+		  			<a href="{{page.rot}}/authorslist/0/?search={{search}}">{{authors_total}} {{page.glob.l10n.authors}}...</a>
 				</li>
 			{% endif %}
 		</ul>
 	</div>
 	<div data-role="collapsible">
-		<h3>{{page.glob.langa.tags}}:  {{tags_total}}</h3>
+		<h3>{{page.glob.l10n.tags}}:  {{tags_total}}</h3>
 		<ul data-role="listview" data-filter="false">	
 			{% for tag in tags %}
 				<li>
@@ -46,13 +46,13 @@
 		  {% endfor %}
 		  {% if more_tags %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/tagslist/0/?search={{search}}">{{tags_total}} {{page.glob.langa.tags}}...</a>
+		  			<a href="{{page.rot}}/tagslist/0/?search={{search}}">{{tags_total}} {{page.glob.l10n.tags}}...</a>
 				</li>
 			{% endif %}
 		</ul>
 	</div>
 	<div data-role="collapsible">
-		<h3>{{page.glob.langa.series}}:  {{series_total}}</h3>
+		<h3>{{page.glob.l10n.series}}:  {{series_total}}</h3>
 		<ul data-role="listview" data-filter="false">	
 			{% for this_series in series %}
 				<li>
@@ -62,7 +62,7 @@
 		  {% endfor %}
 		  {% if more_series %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/serieslist/0/?search={{search}}">{{series_total}} {{page.glob.langa.series}}...</a>
+		  			<a href="{{page.rot}}/serieslist/0/?search={{search}}">{{series_total}} {{page.glob.l10n.series}}...</a>
 				</li>
 			{% endif %}
 		</ul>
