--- a/templates/login.html
+++ b/templates/login.html
@@ -6,15 +6,15 @@
 
 {% block content %}
 	<header>
-		<h1>{{page.glob.langa.login}}</h1>
+		<h1>{{page.glob.l10n.login}}</h1>
 	</header>
 	<form action="{{page.rot}}/login/" method="post" id="loginform" data-proot="{{page.rot}}">
 	<fieldset data-role="fieldcontain">
-	  <label for="username">{{page.glob.langa.admin_username}}</label>
+	  <label for="username">{{page.glob.l10n.admin_username}}</label>
 	  <input type="text" name="username" id="username" value="{{username}}" autofocus required/>
-	  <label for="password">{{page.glob.langa.admin_userpw}}</label>
+	  <label for="password">{{page.glob.l10n.admin_userpw}}</label>
 	  <input type="password" name="password" id="password" value="{{password}}" required />
 	</fieldset >      
-	<button type="submit" name="login">{{page.glob.langa.login}}</button> 
+	<button type="submit" name="login">{{page.glob.l10n.login}}</button> 
 	</form>
 {% endblock %}
