--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,40 +2,40 @@
 	{% if curpage > 0 %}
 		<a  data-icon="arrow-l" data-role="button" class="ui-btn-left"
 				href="{{page.rot}}/{{url}}/{{curpage - 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			{{page.glob.langa.pagination_prev}}
+			{{page.glob.l10n.pagination_prev}}
 		</a>	
 	{% endif %}
 	<h1>
 		{% if search != NULL %}
-			{{page.glob.langa.pagination_search}} 
+			{{page.glob.l10n.pagination_search}} 
 		{% else %}
-			{{page.glob.langa.pagination_page}} 
+			{{page.glob.l10n.pagination_page}} 
 		{% endif %}
 		{{ curpage+1 }}/{{ pages }}
 	</h1>
 	{% if curpage+1 < pages %}
 		<a data-icon="arrow-r" data-role="button"  class="ui-btn-right"
 			 href="{{page.rot}}/{{url}}/{{curpage + 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			{{page.glob.langa.pagination_next}}
+			{{page.glob.l10n.pagination_next}}
 		</a>	
 	{% endif %}
 
 {% else %}
 	{% if page.admin %}
 	<a href="{{page.rot}}/admin/" data-icon="gear" class="ui-btn-left">
-		{{ page.glob.langa.admin_short }}
+		{{ page.glob.l10n.admin_short }}
 	</a>
 	{% endif %}
 	<h1>{{ page.title }}</h1>
 	{% if page.auth %}
 		{% if page.menu == 1 %}
 			<a data-icon="gear" data-role="button" class="ui-btn-right" href="{{page.rot}}/logout/">
-				{{page.glob.langa.logout}}
+				{{page.glob.l10n.logout}}
 			</a>	
 		{% else %}
 			{% if page.level > 1 %}
 				<a  data-icon="back" data-rel="back" class="ui-btn-right">
-					{{ page.glob.langa.back }}
+					{{ page.glob.l10n.back }}
 				</a>
 			{% endif %}
 	{% endif %}
@@ -46,27 +46,27 @@
 	<ul>		
 	  <li>
 	  	<a href="{{page.rot}}/" data-theme="c" {% if page.menu == 1 %}class="ui-btn-active"{%endif%}>
-	  		{{page.glob.langa.home}}
+	  		{{page.glob.l10n.home}}
 	  	</a>
 	  </li>
 	  <li>
 	  	<a href="{{page.rot}}/titleslist/0/" {% if page.menu == 2 %}class="ui-btn-active"{%endif%}>
-	  		{{page.glob.langa.titles}}
+	  		{{page.glob.l10n.titles}}
 	  	</a>
 	  </li>
 	  <li>
 	  	<a href="{{page.rot}}/authorslist/0/" {% if page.menu == 3 %}class="ui-btn-active"{%endif%}>
-	  		{{page.glob.langa.authors}}
+	  		{{page.glob.l10n.authors}}
 	  	</a>
 	  </li>
 	  <li>
 	  	<a href="{{page.rot}}/tagslist/0/" {% if page.menu == 4 %}class="ui-btn-active"{%endif%}>
-	  		{{page.glob.langa.tags}}
+	  		{{page.glob.l10n.tags}}
 	  	</a>
 	  </li>       
 	  <li>
 	  	<a href="{{page.rot}}/serieslist/0/" {% if page.menu == 5 %}class="ui-btn-active"{%endif%}>
-	  		{{page.glob.langa.series}}
+	  		{{page.glob.l10n.series}}
 	  	</a>
 	  </li>       	  
 	</ul>
@@ -75,9 +75,9 @@
 <form action="{{page.rot}}/search/" 
 			method="get" class="ui-bar-a">
 	<div data-role="fieldcontain" class="ui-hide-label">
-		<label for="search">{{page.glob.langa.pagination_search_lbl}}</label>
+		<label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
 		<input type="search" name="search" id="search" value="{{search}}" 
-					placeholder="{{page.glob.langa.pagination_search_ph}}"/>
+					placeholder="{{page.glob.l10n.pagination_search_ph}}"/>
 	</div>			
 </form>
 {% endif %}
