--- a/templates/series_detail.html
+++ b/templates/series_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="series_detail row">
 	<header>
-		<h1>{{page.glob.langa.booksbyseries}} "{{ series.name }}":</h1>
+		<h1>{{page.glob.l10n.booksbyseries}} "{{ series.name }}":</h1>
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
