Speed up title thumbnail retrieval by linking directly to thumbnail files, if available

--- a/templates/series_detail.html
+++ b/templates/series_detail.html
@@ -8,7 +8,7 @@
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
-			{% include "title_entry_series.html" %}
+			{% include "title_entry.html" %}
 		{% endfor %}	
 	</ul>
 </section>
