Added series number to details view, fixes issue #74
The series index of a book is now displayed in the series link in the
title details page, if available.

--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -80,7 +80,7 @@
 		<div id="series" data-role="collapsible">
 				<h2>{{page.glob.l10n.series}}</h2>
 				{% for this_series in series %}
-				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }}</a>
+				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }} ({{book.series_index}})</a>
 				{% endfor %} 
 		</div>		
 		{% endif %}
