Added Apple Icon for home screens etc, fixes #97

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.4.5.min.css">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
   <link rel="icon" href="{{page.rot}}/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{{page.rot}}/bbs-icon.png">
 	<script src="{{page.rot}}/js/libs/modernizr-2.6.2-custom.min.js"></script>
 </head>
 <body>
