--- a/templates/admin_user.html
+++ b/templates/admin_user.html
@@ -36,17 +36,17 @@
 			<option value="{{tag.key}}" {%if user.tags == tag.key %}selected="true"{% endif %}>{{tag.name}}</option>
 		{% endfor %}
 		</select>
-		<p>{{page.glob.langa.admin_usertags_expl}}</p>					
+		<p>{{page.glob.langa.admin_usertags_expl}}</p>
 	</fieldset>	
 	<fieldset data-role="fieldcontain">
-		<label for="edituser_role">{{page.glob.langa.role}}</label>
+		<label for="edituser_role">{{page.glob.langa.admin_role}}</label>
 		<select name="edituser_role" id="edituser_role" value="{{user.role}}">
-			<option value="normal" {% if user.role == 0 %}selected="true"{% endif %}>Normal</option>
-			<option value="admin" {% if user.role == 1 %}selected="true"{% endif %}>Admin</option>
+			<option value="normal" {% if user.role == 0 %}selected="true"{% endif %}>{{page.glob.langa.admin_role_user}}</option>
+			<option value="admin" {% if user.role == 1 %}selected="true"{% endif %}>{{page.glob.langa.admin_role_admin}}</option>
 		</select>
 	</fieldset>
 	<button  data-ajax="true" data-icon="check" type="submit">
 		{{page.glob.langa.save}}
-	</button>	
+	</button>
 </form>
 {% endblock %}
