--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,24 +1,9 @@
-{% if curpage != NULL %}
-	{% if curpage > 0 %}
-		<a  data-icon="arrow-l" data-role="button" class="ui-btn-left" 
-				href="{{page.rot}}/{{url}}/{{curpage - 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			{{page.glob.l10n.pagination_prev}}
-		</a>	
-	{% endif %}
-	{% if curpage+1 < pages %}
-		<a data-icon="arrow-r" data-role="button" class="ui-btn-right" 
-				href="{{page.rot}}/{{url}}/{{curpage + 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			{{page.glob.l10n.pagination_next}}
-		</a>	
-	{% endif %}
-		<h1>
-		{% if search != NULL %}
-			{{page.glob.l10n.pagination_search}} 
-		{% else %}
-			{{page.glob.l10n.pagination_page}} 
-		{% endif %}
-		{{ curpage+1 }}/{{ pages }}
-		</h1>
-{% endif %}
+<!--
+  ~  BicBucStriim
+  ~
+  ~  Copyright (c) 2012-2015 Rainer Volz
+  ~  Licensed under MIT License, see LICENSE
+  ~
+  -->
 
 <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
