--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,14 @@
 
 {% block pid %}id="padmin"{%endblock%}
 {% block content %}
-<h1>{{ page.glob.l10n.admin_short }}</h1>
+
+<!--
+  ~  BicBucStriim
+  ~
+  ~  Copyright (c) 2012-2015 Rainer Volz
+  ~  Licensed under MIT License, see LICENSE
+  ~
+  -->
 
 <ul data-role="listview">
 	<li>
