--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,11 +1,21 @@
 {% extends 'main.html' %}
 
 {% block headerlinks %}
-<link rel="related" href="{{page.rot}}/opds/" 
+<!--
+  ~  BicBucStriim
+  ~
+  ~  Copyright (c) 2012-2015 Rainer Volz
+  ~  Licensed under MIT License, see LICENSE
+  ~
+  -->
+
+<link rel="related" href="{{page.rot}}/opds/"
 	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
 <link rel="alternate" href="{{page.rot}}/opds/tagslist/" 
 	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by tags">
 {% endblock %}
+
+{% block pid %}id="ptags"{%endblock%}
 
 {% block content %}
 <ul data-role="listview" data-filter="false">	
@@ -20,4 +30,20 @@
 		{% endif %}
   	{% endfor %}
 </ul>
+{% endblock %}
+
+
+{% block leftpanel %}
+<section data-role="panel" data-display="overlay" data-position="left" id="tags_options_panel">
+    <h2>{{page.glob.l10n.pagination_search}}</h2>
+
+    <form action="{{page.rot}}/search/"
+          method="get" class="ui-bar-a">
+        <div data-role="fieldcontain" class="ui-hide-label">
+            <label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
+            <input type="search" name="search" id="search" value="{{search}}"
+                   placeholder="{{page.glob.l10n.pagination_search_ph}}"/>
+        </div>
+    </form>
+</section>
 {% endblock %}
