--- a/templates/titles.html
+++ b/templates/titles.html
@@ -1,11 +1,21 @@
 {% extends 'main.html' %}
 
 {% block headerlinks %}
-<link rel="related" href="{{page.rot}}/opds/" 
+<!--
+  ~  BicBucStriim
+  ~
+  ~  Copyright (c) 2012-2015 Rainer Volz
+  ~  Licensed under MIT License, see LICENSE
+  ~
+  -->
+
+<link rel="related" href="{{page.rot}}/opds/"
 	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
 <link rel="alternate" href="{{page.rot}}/opds/titleslist/0/" 
 	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by titles">
 {% endblock %}
+
+{% block pid %}id="ptitles"{%endblock%}
 
 {% block content %}
 <ul data-role="listview" data-filter="false">	
@@ -17,4 +27,31 @@
 		{% endif %}
   {% endfor %}
 </ul>
+{% endblock %}
+
+{% block leftpanel %}
+<section data-role="panel" data-display="overlay" data-position="left" id="titles_options_panel">
+    <h2>Options</h2>
+
+    <div class="ui-body ui-body-a ui-corner-all">
+        <h3>{{page.glob.l10n.pagination_search}}</h3>
+
+        <form action="{{page.rot}}/search/"
+              method="get">
+            <div data-role="fieldcontain" class="ui-hide-label">
+                <label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
+                <input type="search" name="search" id="search" value="{{search}}"
+                       placeholder="{{page.glob.l10n.pagination_search_ph}}"/>
+            </div>
+        </form>
+    </div>
+    <div class="ui-body ui-body-a ui-corner-all">
+        <h3>Sortierung nach</h3>
+
+        <div data-role="controlgroup" data-type="horizontal">
+            <a href="{{page.rot}}/titleslist/0/?sort=byReverseDate" class="ui-btn ui-btn-corner-all">Datum</a>
+            <a href="{{page.rot}}/titleslist/0/?sort=byTitle" class="ui-btn ui-btn-corner-all">Titel</a>
+        </div>
+    </div>
+</section>
 {% endblock %}
